# shvapp

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .qmake.conf  CMakeLists.txt  Dockerfile  README.md  beginners-guide.md  build-docker.sh  build-win.cmd  build-win.sh  deploy-win.cmd  deploy-win.sh  flake.nix  make-dist.sh  make-linux-artifacts-qt6.sh  make-linux-artifacts.sh  shv.pro
bfsview/: bfsview.pro
bfsview/src/: appclioptions.h  bfsviewapp.cpp  bfsviewapp.h  main.cpp  src.pri
clients/: clients.pro
clients/ams005ycp/: ams005ycp.iss  ams005ycp.pro  ams005ycp.qrc
clients/bfsview/: CMakeLists.txt  bfsview.iss  bfsview.pro  bfsview.qrc
clients/bfsview/src/: appclioptions.cpp  appclioptions.h  bfsviewapp.cpp  bfsviewapp.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.ui  src.pri  version.h  visuwidget.cpp  visuwidget.h
clients/brcgate/: CMakeLists.txt
clients/flatline/: flatline.iss  flatline.pro  flatline.rc
clients/hscope/: CMakeLists.txt  hscope.iss  hscope.pro  hscope.qrc
clients/hscope-old/: hscope.pro
clients/jn50view/: CMakeLists.txt  jn50view.iss  jn50view.pro  jn50view.qrc  jn50view.rc
clients/jn50view/doc/help/: Makefile  index.rst
clients/jn50view/src/: appclioptions.cpp  appclioptions.h  dlgapplog.cpp  jn50viewapp.cpp  jn50viewapp.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  src.pri  svghandler.cpp  svghandler.h  thresholdsdialog.cpp  thresholdsdialog.h  thresholdsdialog.ui  visucontroller.cpp  visucontroller.h  visuwidget.cpp  visuwidget.h
clients/jn50view/src/logview/: dlglogview.cpp  dlglogview.h  dlglogview.ui  logmodel.cpp  logmodel.h  logview.pri
clients/jn50view/src/svgscene/: graphicsview.cpp  graphicsview.h  log.h  saxhandler.cpp  saxhandler.h  simpletextitem.cpp  simpletextitem.h  svgscene.pri
clients/jn50view/translations/: jn50view.cs_CZ.qm  jn50view.cs_CZ.ts
clients/revitestdevice/: revitestdevice.pro
clients/shvplaces/: main.cpp  map.qml  poimodel.cpp  poimodel.h  shvplaces.pro  shvplaces.qrc
clients/shvsites/: CMakeLists.txt  SiteListRow.qml  appclioptions.cpp  appclioptions.h  main.cpp  map.qml  shvsites.pro  shvsites.qrc  shvsitesapp.cpp  shvsitesapp.h  sitesmodel.cpp  sitesmodel.h
clients/websocket-configure-html/: configure.html  scripts.js  style.css
clients/websocketclient-html/: websocket-client.html  websocketosaurus.html
clients/websocketclient-qt/: echoclient.cpp  main.cpp
cmake/: qt_moc_disable_warnings.h
distro/shv.AppDir/: AppRun  shv.desktop
eyassrvctl/: eyassrvctl.pro
eyassrvctl/src/: eyassrvctlapp.cpp  eyassrvctlapp.h  main.cpp  src.pri
historyprovider/: CMakeLists.txt  app.pro  common.pro  historyprovider.pro  tests.pro
historyprovider/etc/shv/: historyprovider.conf
historyprovider/src/: appclioptions.cpp  appclioptions.h  historyapp.cpp  historyapp.h  leafnode.cpp  leafnode.h  logtype.h  main.cpp  shvjournalnode.cpp  shvjournalnode.h  src.pri  utils.cpp
historyprovider/tests/: connection_failure.cpp  methods.cpp  mockrpcconnection.cpp  mockrpcconnection.h  sites.h  sites_timeout.cpp  test.cpp
historyprovider3/: CMakeLists.txt
historyprovider3/src/: appclioptions.cpp  appclioptions.h  getlog.cpp  getlog.h  historyapp.cpp  historyapp.h  leafnode.cpp  leafnode.h  main.cpp  shvjournalnode.cpp  shvjournalnode.h  slavehpinfo.h  utils.cpp  utils.h  valuecachenode.cpp  valuecachenode.h  version.h
historyprovider3/tests/: alarms.cpp  connection_failure.cpp  dirty_log_trimming.cpp  getlog.cpp  hp_getlog.cpp  legacy_getlog.cpp  methods.cpp  mockrpcconnection.cpp  mockrpcconnection.h  pretty_printers.h  pushlog.cpp  sanitizer.cpp  sites.h  sites_timeout.cpp  slavehp.cpp  synclog.cpp  test_vars.h.in  utils.cpp  utils.h  value_cache.cpp
libshv/: libshv.pro
libshv/libshvcore/: libshvcore.pro
libshv/libshvcoreqt/: libshvcoreqt.pro
libshv/libshvgui/: libshvgui.pro
libshv/tests/: test.pri
libshviotqt/: libshviotqt.pro
libshviotqt/src/: shvnode.cpp  shvnode.h  shvnodetree.cpp  shvnodetree.h  src.pri
nixos/modules/: default.nix  shvbroker.nix
revitestdevice/: revitestdevice.pro
shv2mqtt/: CMakeLists.txt
shvagent/: CMakeLists.txt  shvagent.pro
shvbrclabprovider/: CMakeLists.txt  shvbrclabprovider.pro
shvbrclabprovider/src/: appclioptions.h  brclabfsnode.cpp  brclabfsnode.h  brclabnode.cpp  brclabnode.h  brclabparser.cpp  brclabusers.cpp  brclabusers.h  brclabusersnode.cpp  brclabusersnode.h  main.cpp  shvbrclabproviderapp.cpp  shvbrclabproviderapp.h  src.pri
shvbroker/: CMakeLists.txt  shvbroker.pro
shvcall/: CMakeLists.txt  shvcall.pro
shvfileprovider/: shvfileprovider.pro
shvhistoryprovider/: CMakeLists.txt  shvhistoryprovider.pro
shvhistoryprovider/src/: abstractrequest.cpp  abstractrequest.h  appclioptions.cpp  appclioptions.h  application.cpp  application.h  asyncrequest.cpp  asyncrequest.h  checklogrequest.cpp  checklogrequest.h  checklogtask.cpp  checklogtask.h  checktype.h  datetimeinterval.h  devicelogrequest.cpp  devicelogrequest.h  devicemonitor.cpp  devicemonitor.h  dirconsistencychecktask.cpp  dirconsistencychecktask.h  dirtylogmanager.cpp  dirtylogmanager.h  diskcleaner.cpp  diskcleaner.h  getlogmerge.cpp  getlogmerge.h  getlogrequest.cpp  getlogrequest.h  logdir.cpp  logdir.h  logdirreader.cpp  logdirreader.h  logsanitizer.cpp  logsanitizer.h  main.cpp  migration.cpp  migration.h  rootnode.cpp  rootnode.h  shvsubscription.cpp  (+6 more)
shvrexec/: CMakeLists.txt  shvrexec.pro
shvrsh/: CMakeLists.txt  shvrsh.pro
shvsitesprovider/: CMakeLists.txt  shvsitesprovider.pro
shvsitesprovider/etc/shv/: shvsitesprovider.conf
shvsitesprovider/src/: appclioptions.cpp  appclioptions.h  dirsynctask.cpp  dirsynctask.h  gitpushtask.cpp  gitpushtask.h  main.cpp  nodes.cpp  nodes.h  sitesproviderapp.cpp  sitesproviderapp.h  src.pri  synctask.cpp  synctask.h  tardirtask.cpp  tardirtask.h  untardirtask.cpp  untardirtask.h
sitesprovider/: sitesprovider.pro
tools/: copy-qt.sh
(+471 files in other folders)
